fix quasar icon not showing

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,7 @@
   }
   
   * {
-    font-family: 'Noto Sans TC', "Nunito", sans-serif !important;
+    font-family: 'Noto Sans TC', "Nunito", sans-serif;
   }
   body {
     width: 100%;
